# projects

./: LICENSE  README.md  pyproject.toml
project-1/: README.md  __main__.py  reportcard.py
project-2/: userscript.py
project-3/: employee_profile_generator.py
project-4/: name.py
